[package]
name = "front_matter"
version = "0.1.0"
authors = ["Vincent Prouillet <prouillet.vincent@gmail.com>"]
edition = "2018"

[dependencies]
tera = { git = "https://github.com/Geobert/tera", branch = "fix-accentuaded-string-sort"}
chrono = "0.4"
serde = "1"
serde_derive = "1"
toml = "0.5"
regex = "1"
lazy_static = "1"

errors = { path = "../errors" }
utils = { path = "../utils" }
